--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ endif()
 # Set some options
 
 if(APPLE)
+    set(CMAKE_MACOSX_RPATH OFF)
     if (NOT CMAKE_INSTALL_NAME_DIR)
         set(CMAKE_INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib")
     endif (NOT CMAKE_INSTALL_NAME_DIR)
@@ -124,5 +125,5 @@ set(THREADS_STATIC_LDFLAGS "${CMAKE_THREAD_LIBS_INIT}")
 add_subdirectory(include)
 add_subdirectory(share)
 add_subdirectory(src)
-add_subdirectory(tests)
-add_subdirectory(docs/old)
+# add_subdirectory(tests)
+# add_subdirectory(docs/old)
