--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -85,31 +85,31 @@ endif (ENABLE_STATIC OR NOT ENABLE_SHARED_EXECUTABLES)
 #-----------------------------------------------------------------------
 # Utility commands
 
-add_c_executable(
-    cork-hash
-    OUTPUT_NAME cork-hash
-    SOURCES cork-hash/cork-hash.c
-    LOCAL_LIBRARIES
-        libcork
-)
-
-add_c_executable(
-    cork-initializer
-    SKIP_INSTALL
-    OUTPUT_NAME cork-initializer
-    SOURCES
-        cork-initializer/init1.c
-        cork-initializer/init2.c
-        cork-initializer/main.c
-    LOCAL_LIBRARIES
-        libcork
-)
-
-add_c_executable(
-    cork-test
-    SKIP_INSTALL
-    OUTPUT_NAME cork-test
-    SOURCES cork-test/cork-test.c
-    LOCAL_LIBRARIES
-        libcork
-)
+# add_c_executable(
+#     cork-hash
+#     OUTPUT_NAME cork-hash
+#     SOURCES cork-hash/cork-hash.c
+#     LOCAL_LIBRARIES
+#         libcork
+# )
+# 
+# add_c_executable(
+#     cork-initializer
+#     SKIP_INSTALL
+#     OUTPUT_NAME cork-initializer
+#     SOURCES
+#         cork-initializer/init1.c
+#         cork-initializer/init2.c
+#         cork-initializer/main.c
+#     LOCAL_LIBRARIES
+#         libcork
+# )
+# 
+# add_c_executable(
+#     cork-test
+#     SKIP_INSTALL
+#     OUTPUT_NAME cork-test
+#     SOURCES cork-test/cork-test.c
+#     LOCAL_LIBRARIES
+#         libcork
+# )
